# esci-ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
esci_ai/: agents.py  models.py  performance.py  run.py  walkthrough.py
esci_ai/setup/: download_data.py  process_data.py
notebooks/: 01_first_pass_solution.py  02_first_pass_error_analysis.md  03_first_pass_axial_codes.md  04_second_pass_solution.py  walkthrough.py
