[project]
name = "esci-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.38.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.58.0",
    "pydantic-evals>=1.58.0",
]

[dependency-groups]
dev = [
    "marimo>=0.19.10",
]
lint = [
    "ruff>=0.15.0",
    "ty>=0.0.16",
]
